[package]
name = "words_against_friends"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros", "time"] }
futures = "0.3.25"
anyhow = "1.0.68"
twilight-model = "0.14.4"
twilight-http = "0.14.3"
twilight-gateway = "0.14.1"
twilight-cache-inmemory = "0.14.3"
twilight-embed-builder = "0.11.1"
twilight-mention = "0.14.0"
twilight-standby = "0.14.1"
twilight-util = "0.14.2"
ttaw = "0.3.0"
rand = "0.8.5"
